# keeks-elote

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: cfb.py
examples/data/: cfb_w_odds.json
keeks_elote/: __init__.py  backtest.py  data_handling.py  model_evaluation.py
tests/: conftest.py  test_backtest.py  test_backtest_settlement.py  test_cfb_example.py  test_data_handling.py  test_examples.py  test_model_evaluation.py
